compiler/tests/en/errors/toplevel_var_after_func.salam
// EXPECT: E085
func helper: ret 1 end

x := 1

func main: end
